testsuite/tests/printer/Ppr017.stderr

Ppr017.ppr.hs:4:22: error:
    Not in scope: type constructor or class ‘Single’
